--- a/roll20npcimporter/roll20npcimporter.css
+++ b/roll20npcimporter/roll20npcimporter.css
@@ -1,19 +1,20 @@
-#actors.flexcolumn.active {
-    display: flex;
-    flex-direction: column;
+ul {
+    list-style: none;
+    padding:0;
 }
-#actors.flexcolumn > .directory-list {
-    width: 100%;
-    height: auto;
-    flex-basis: 0;
-    flex-grow: 1;
+.import-tab{
+    width: 45%;
+    line-height: 32px;
+    margin: 0 2.5%;
+    border: 1px solid #AAA;
+    border-radius: 3px;
 }
-#actors.flexcolumn > .directory-footer {
-    height: auto;
-}
-#actors.flexcolumn > .directory-footer > * {
-    margin-top: 5px;
-}
-.dnd5e.actor-sheet .biography .editor-content span {
-    display: inline;
+
+.btn {
+    width: 80%;
+    background: rgba(255,255,255,0.75);
+    border: 1px solid #AAA;
+    border-radius: 3px;
+    line-height: 28px;
+    margin-left: 10%;
 }
